fix cards spacing and wordwrap

--- a/styles.css
+++ b/styles.css
@@ -119,8 +119,6 @@ a {
 .card {
   display: flex;
   flex-direction: column;
-  /*align-content: center;*/
-  justify-content: space-around;
   align-items: center;
   gap: 10px;
   padding: 15px;
@@ -135,6 +133,7 @@ a {
 }
 .card-text {
   font-size: 12px;
+  max-width: 100px;
 }
 
 .sub-content {
